modify: security cors config